kubernetes/dev/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: uvarc-unified-service
  name: uvarc-unified-service-deployment
  namespace: uvarc-unified-services
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uvarc-unified-service
  template:
    metadata:
      labels:
        app: uvarc-unified-service
    spec:
      volumes:
      - name: uvarc-unified-service-ceph-data
        persistentVolumeClaim:
          claimName: uvarc-unified-service-ceph-pvc-data
      containers:
      - image: "ghcr.io/uvarc/uvarc-unified-service:latest"
      #- image: "quay.io/accord/accord-service:develop"
        name: uvarc-unified-service
        imagePullPolicy: "Always"
        command:
        - /usr/bin/supervisord

        volumeMounts:
        - name: uvarc-unified-service-ceph-data
          mountPath: /opt/local/non_root_user/uvarc_unified_service/data/

        resources:
          requests:
            memory: "1524Mi"
            cpu: "1000m"
          limits:
            memory: "2024Mi"
            cpu: "1500m"
